[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/tileset/props.png" type="Texture" id=1]
[ext_resource path="res://scene/Spike.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 5 )

[node name="Spike" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
spike = "DOWN"

[node name="SpriteDown" type="Sprite" parent="."]
visible = false
position = Vector2( 8, 8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 32, 16, 16, 16 )

[node name="CollisionDown" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8, 11 )
shape = SubResource( 1 )

[node name="SpriteUp" type="Sprite" parent="."]
position = Vector2( 8, 8 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 48, 16, 16, 16 )

[node name="CollisionUp" type="CollisionShape2D" parent="."]
position = Vector2( 8, 5 )
shape = SubResource( 1 )
